--- a/src/main/webapp/i18n/cn/cboard.json
+++ b/src/main/webapp/i18n/cn/cboard.json
@@ -51,7 +51,7 @@
     "SHARE_RESOURCE": "资源分享"
   },
   "HEADER": {
-    "SIGN_OUT": "注销"
+    "SIGN_OUT": "登出"
   },
   "DASHBOARD": {
     "PARAM": {
