--- a/src/main/webapp/i18n/cn/cboard.json
+++ b/src/main/webapp/i18n/cn/cboard.json
@@ -145,7 +145,8 @@
       "SIZE": "大小",
       "COLOR": "透明度",
       "PREVIEW_QUERY": "预览查询",
-      "PERCENT_BAR": "百分比堆叠"
+      "PERCENT_BAR": "百分比堆叠",
+      "AGGREGATE_TYPE": "聚合类型"
     },
     "DASHBOARD": {
       "DASHBOARD": "看板",
